manifests/installation/charts/onex/kustomize/onex-apiserver/base/deployment_patch.yaml
# Copyright 2020 Lingfei Kong <colin404@foxmail.com>. All rights reserved.
# Use of this source code is governed by a MIT style
# license that can be found in the LICENSE file.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: onex-apiserver # 资源名称
spec:
  template:
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - onex-apiserver
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - args:
        - --secure-port=52010
        - --bind-address=0.0.0.0
        - --etcd-servers=127.0.0.1:2379
        - --client-ca-file=/opt/onex/cert/ca.pem
        - --tls-cert-file=/opt/onex/cert/onex-apiserver.pem 
        - --tls-private-key-file=/opt/onex/cert/onex-apiserver-key.pem
        -  --enable-admission-plugins=NamespaceAutoProvision,NamespaceExists,NamespaceLifecycle
        - --v=10
        image: ccr.ccs.tencentyun.com/onexstack/onex-apiserver-amd64:v1.0.0
        name: onex-apiserver
        ports:
        - containerPort: 52010
          name: https
          protocol: TCP
        livenessProbe:
          tcpSocket:
            port: 52010
        readinessProbe:
          tcpSocket:
            port: 52010
        startupProbe:
          tcpSocket:
            port: 52010
